// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isSelected renders true when specified 1`] = `
<tr
  class="kuiTableRow kuiTableRow-isSelected"
>
  <td
    class="kuiTableRowCell"
  >
    <div
      class="kuiTableCellContent"
    >
      <span
        class="kuiTableCellContent__text"
      />
    </div>
  </td>
</tr>
`;

exports[`renders KuiTableRow 1`] = `
<tr
  aria-label="aria-label"
  class="kuiTableRow testClass1 testClass2"
  data-test-subj="test subject string"
>
  <td
    class="kuiTableRowCell"
  >
    <div
      class="kuiTableCellContent"
    >
      <span
        class="kuiTableCellContent__text"
      >
        hi
      </span>
    </div>
  </td>
</tr>
`;
